# ergos-mvp

./: .gitignore  =1.0  README.md  config.yaml  ergos.sh  pyproject.toml  setup-5080.sh  test_combined.py  test_local.py  test_markup.py
.planning/: PRD.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  TRD.md  config.json
.planning/debug/: flutter-audio-cuts-off.md  sarcasm-command-stuck-processing.md  segfault-disconnect-tts.md  segfault-persistent.md  segfault-tts-audio.md  segfault-tts-recurring.md  stt-inaccurate-transcription.md  stt-sample-rate-mismatch.md  stt-tts-truncated-garbled-reconnect.md  tts-echo-false-bargein.md  tts-inter-sentence-static.md  vad-cuts-off-speech.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  VERIFICATION.md
.planning/phases/02-audio-infrastructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-stt-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-state-machine/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-llm-integration/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-tts-pipeline/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-persona-system/: 07-01-PLAN.md  07-01-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-webrtc-transport/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-RESEARCH.md
.planning/phases/09-flutter-client-core/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  claude-code-orchestrator-integration.md
client/: pubspec.yaml
client/android/app/: build.gradle
client/ios/: Podfile
client/lib/: main.dart
client/linux/: CMakeLists.txt
client/test/: widget_test.dart
src/ergos/: __init__.py  __main__.py  cli.py  config.py  hardware.py  metrics.py  pipeline.py  server.py
tests/: test_integration.py
tests/unit/: test_cloud_llm.py  test_config_v2.py  test_echo_suppression.py  test_emotion_markup.py  test_ergos_memory.py  test_ergos_personality.py  test_full_duplex.py  test_llm_qwen3.py  test_meeting_notes.py  test_stt_filter.py  test_tars_memory.py  test_tars_personality.py  test_tool_executor.py  test_tool_processor.py  test_tool_registry.py  test_tts_orpheus.py  test_vram.py  test_vram_integration.py
tools/: default.yaml
(+131 files in other folders)
